Refac: "일부 Repository 메서드에서 Entity 대신 DTO 반환"