@@ -1,13 +1,13 @@
 package com.example.JustGetStartedBackEnd.API.Team.Service;
 
 import com.example.JustGetStartedBackEnd.API.Common.DTO.PagingResponseDTO;
-import com.example.JustGetStartedBackEnd.API.Team.DTO.TeamDTO;
+import com.example.JustGetStartedBackEnd.API.Common.Exception.BusinessLogicException;
 import com.example.JustGetStartedBackEnd.API.Team.DTO.Response.TeamInfoDTO;
+import com.example.JustGetStartedBackEnd.API.Team.DTO.TeamDTO;
 import com.example.JustGetStartedBackEnd.API.Team.Entity.Team;
 import com.example.JustGetStartedBackEnd.API.Team.Entity.Tier;
 import com.example.JustGetStartedBackEnd.API.Team.ExceptionType.TeamExceptionType;
 import com.example.JustGetStartedBackEnd.API.Team.Repository.TeamRepository;
-import com.example.JustGetStartedBackEnd.API.Common.Exception.BusinessLogicException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.Cacheable;
@@ -18,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,27 +29,16 @@ public class TeamService {
     @Transactional(readOnly = true)
     public PagingResponseDTO<TeamDTO> findAll(int page, int size, String keyword, String tier) {
         Pageable pageable = PageRequest.of(page, size);
-        Page<Team> teamPage;
+        Page<TeamDTO> teamPage;
 
-        if ((tier == null || tier.isEmpty()) && (keyword == null || keyword.isEmpty())) {
-            // tier와 keyword가 둘 다 없을 경우, 모든 팀 검색
-            teamPage = teamRepository.findAll(pageable);
-        } else if (tier != null && !tier.isEmpty() && (keyword == null || keyword.isEmpty())) {
-            // tier만 존재할 경우, 해당 tier의 팀 검색
-            Tier tierEntity = tierService.getTierByName(tier);
-            teamPage = teamRepository.findByTier(tierEntity.getTierId(), pageable);
-        } else if (tier == null || tier.isEmpty()) {
-            // keyword만 존재할 경우, 팀 이름으로 검색
-            teamPage = teamRepository.findByTeamNameKeyword(keyword, pageable);
+        if(tier == null || tier.isBlank()){
+            teamPage = teamRepository.searchPagedTeam(null, keyword, pageable);
         } else {
-            // tier와 keyword가 모두 존재할 경우, 두 조건으로 검색
             Tier tierEntity = tierService.getTierByName(tier);
-            teamPage = teamRepository.findByTierAndKeyword(tierEntity.getTierId(), keyword, pageable);
+            teamPage = teamRepository.searchPagedTeam(tierEntity.getTierId(), keyword, pageable);
         }
 
-        List<TeamDTO> teamDTOs = teamPage.getContent().stream()
-                .map(Team::toTeamDTO)
-                .collect(Collectors.toList());
+        List<TeamDTO> teamDTOs = teamPage.getContent().stream().toList();
 
         return new PagingResponseDTO<>(teamPage, teamDTOs);
     }
